# Coursework2024

./: README.md
Client/: CMakeLists.txt  main.cpp
ClientWeb/: ServerTesting.py  main.py
ClientWeb/templates/: index.html
Server/: .gitignore  CMakeLists.txt  JSONCreation.h  main.cpp
Server/InvertedIndex/: HashNode.h  HashTable.cpp  HashTable.h  InvertedIndex.cpp  InvertedIndex.h  ThreadSafeHashTable.cpp  ThreadSafeHashTable.h
Server/InvertedIndex/Database/: Database.cpp  Database.h  Document.h
Server/ThreadPool/: TaskQueue.cpp  TaskQueue.h  ThreadPool.cpp  ThreadPool.h
